--- a/style.css
+++ b/style.css
@@ -7,15 +7,17 @@
     font-family: 'Open Sans', sans-serif;
     font-family: 'Poppins', sans-serif;
 }
-
+.header {
+    margin: 40px 100px;
+}
 .header-container{
     display: flex;
     justify-content: space-between;
     align-items: center;
-    margin: 40px 120px;
+   
 }
 .header-logo h3 {
-    font-size: 24px;
+    font-size: 1.5rem;
     font-weight: 700;
     color:#3a3a3a;
 }
@@ -31,10 +33,70 @@ nav ul > li {
 nav ul li > a{
     color: #3a3a3a;
     text-decoration: none;
-    font-size: 16px;
+    font-size: 1rem;
     font-weight: 600;
 }
 nav ul li a > i {
-    font-size: 20px;
+    font-size: 1.25rem;
     font-weight: 600;
+}
+
+/* banner styles */
+.banner-container{
+    margin: 50px 0px;
+    display: flex;
+    justify-content: space-evenly;
+    align-items: center;
+    gap: 30px;
+}
+.banner-content{
+   padding: 0 100px 0 0;
+}
+.banner-content .banner-title{
+    font-size: 3.1rem;
+    font-weight: 700;
+    color:#3a3a3a;
+    line-height: 70px;
+}
+.banner-content .banner-disc{
+    color: #3a3a3a;
+    padding-bottom: 15px;
+}
+.banner-content .btn-banner{
+    padding: 10px 16px;
+    font-size: 1.2rem;
+    color: #fff;
+    border-radius: 41px;
+    background: #E02C6D;
+    border: none;
+}
+
+.banner-logo{
+    width: 550px;
+    height: 420px;
+    background-image: url("./images/Circle\ design.svg");
+    background-repeat: no-repeat;
+    background-size: 100%;
+}
+.banner-logo img{
+    margin: 35px 0 0 35px;
+    width: 380px;
+    height: 367px;
+
+}
+
+/* sponsor logos style  */
+.sponsor-container{
+    background-color: #fff;
+    margin: 50px 100px;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    /* box-shadow: 5px 10px 8px #888888; */
+    background-image: linear-gradient(135deg, rgba(240, 244, 248, 0.1) 0%, rgba(241, 244, 247, 0.6) 50.38%, rgba(224, 227, 231, 0.1) 100%);
+}
+.sponsor-container img{
+    width: 80px;
+    height: 35px;
+    padding: 20px;
 }
